basics/06services/go-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-go-service
  labels:
    app: hello-go
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: hello-go-pod
