basics/06services/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: hello-http
spec:
  selector:
    app: redis-pod
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
